Add initial project structure with JPA entities, repositories, and configuration
- Created JPA entities: Cliente, Proveedor, Usuario, Incidencia, DiccionarioFallas, SolicitudRepuesto
- Added corresponding repositories for data access
- Configured JPA auditing with JpaAuditingConfig
- Implemented basic application structure with VcsystemsApplication
- Added security configuration and JWT authentication filter
- Included initial HTML templates for login and report views
- Set up .gitignore and .gitattributes for project management